@@ -14,6 +14,8 @@ Release ...
   numerical expressions.
 * [nt]roff: Debugging requests for watching macros, strings, and number
   registers have been added.
+* [nt]roff: The ".errprint" request has been added to write custom strings
+  in the same format as internal error messages.
 * [nt]roff: The ".cp" request has been added to control compatibility with
   groff.
 * [nt]roff: The "-mg" macro package has been added for improved support of
